# pyclipr

./: CHANGELOG.md  CMakeLists.txt  README.rst  WHEEL_BUILDING.md  pyproject.toml  setup.py
.github/workflows/: README.md  build-wheels.yml  ci.yml  pythonpublish-old.yml
